--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,19 +1,71 @@
-html body {
-  background-color: rgba(0, 0, 0, 0.845);
+body{
+  background-color: #1a1a1a;
+  display: grid;
+  grid-template-areas: "header";
 }
-
-.formLoging {
+.login-page {
+  width: 360px;
+  padding: 8% 0 0;
+  margin: auto;
+}
+.form {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  max-width: 360px;
+  margin: 0 auto 100px;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.form input {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+.form button {
+  outline: 0;
+  background: rgb(58, 58, 58);
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+.form button:hover,.form button:active,.form button:focus {
+  background: rgb(66, 64, 64);
+}
+.container {
+  position: relative;
+  z-index: 1;
+  max-width: 300px;
+  margin: 0 auto;
+}
+.container .info {
+  margin: 50px auto;
   text-align: center;
 }
-
-.formLoging label {
-  color: white;
+.container .info h1 {
+  margin: 0 0 15px;
+  padding: 0;
+  font-size: 36px;
+  font-weight: 300;
+  color: #1a1a1a;
 }
-.avatarPic img {
-  height: 100px;
-  width: 100px;
-  margin-top: 0;
+.container .info span {
+  color: #4d4d4d;
+  font-size: 12px;
 }
-.infoForm {
-  color: white;
+.container .info span a {
+  color: #000000;
+  text-decoration: none;
 }
