--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LandingPage</title>
   <script defer src="./js/landingpage.js"></script>
+  <link rel="stylesheet" href="../css/reset.css" />
   <link rel="stylesheet" href="./css/popup.css">
 </head>
 
@@ -16,7 +17,7 @@
       <h1>Fortnite</h1>
       <img src="../images/fortnite.jpg" />
       <div class="testing">
-        <a href="/forniteHome"><button>Open project</button></a>
+        <a href="/fortniteHome"><button>Open project</button></a>
       </div>
     </article>
     <article>
