--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,17 +5,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/header.css" />
   <title>Document</title>
 </head>
 
 <body>
+  <section class="avatarPic">
+    <img src="../images/vraagteken.png" />
+  </section>
   <nav>
     <ul>
-      <li><a href="/">Landing Page</a></li>
-      <li><a href="/forniteHome">Home</a></li>
-      <li><a href="/favoriet">Favorieten</a></li>
+      <li class="browser"><a href="/">Landing Page</a></li>
+      <li class="ipad"><a href="/">&#8592;</a></li>
+      <li><a href="/fortniteHome">Home</a></li>
+      <li><a href="/favoriet-images">Favorieten</a></li>
       <li><a href="/blacklist">Blacklists</a></li>
       <li><a href="/login">Login</a></li>
     </ul>
   </nav>
+  
