--- a/public/css/blacklist.css
+++ b/public/css/blacklist.css
@@ -1,5 +1,16 @@
-html body {
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+body {
   background-color: rgba(0, 0, 0, 0.845);
+  height: 100vh;
 }
 
 .avatarPic img {
@@ -8,19 +19,35 @@ html body {
   margin-top: 0;
 }
 .blacklistLayout {
+  padding-top: 50px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  
 }
-
+.blacklistLayout ul {
+  padding-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 .blacklistLayout li {
+  text-align: center;
   list-style-type: none;
-  flex-basis: 33%;
-  padding: 10px;
+  flex-basis: 40%;
+  padding: 20px;
   box-sizing: border-box;
+  align-items: center;
+
+}
+.blacklistLayout li > img {
+  border-radius: 10px;
+  background: linear-gradient(to right, #4364f7, #6fb1fc);
 }
 
 .blacklistLayout img {
-  width: 100%;
+  width: 250px;
+  height: 250px;
 }
 
 .blacklistLayout p {
@@ -29,21 +56,43 @@ html body {
 
 .blacklistLayout form {
   display: flex;
-  align-items: center;
 }
 
 .blacklistLayout textarea {
   flex-grow: 1;
+  padding: 5px;
+  border-radius: 10px;
 }
 
 .blacklistLayout button {
   margin-left: 10px;
   padding: 0.56rem;
+  background-color: #6fb1fc;
+
 }
 .buttonblacklist  {
+  padding-top: 20px;
   display: flex;
-  flex-direction: row;
+  justify-content: center;
 }
 .buttonblacklist textarea {
   width: 400px;
 }
+button {
+  border-radius: 10px;
+
+}
+
+/*------------------------------------------------------Media queries---------------------------------------------------------*/
+
+@media only screen and (max-width: 675px) {
+  .buttonblacklist{
+    flex-direction: column;
+    
+  }
+  .blacklistLayout form {
+    display: block;
+    padding-top: 2px;
+
+  }
+  }
