--- a/public/css/home.css
+++ b/public/css/home.css
@@ -21,6 +21,7 @@ body {
   perspective: 1000px;
   margin-left: 10px;
   margin-right: 10px;
+  margin-bottom: 150px;
 }
 
 .flip-card-inner {
@@ -52,6 +53,7 @@ body {
 }
 
 .flip-card-front {
+  border-radius: 10px;
   background: linear-gradient(to left, #4364f7, #6fb1fc);
   color: black;
   z-index: 2;
@@ -59,13 +61,29 @@ body {
   align-items: center;
 }
 
+.flip-card-front>img {
+  height: 50%;
+  width: 50%;
+}
+
 .flip-card-back {
+  border-radius: 10px;
   background: linear-gradient(to right, #4364f7, #6fb1fc);
   color: white;
   transform: rotateY(180deg);
   z-index: 1;
   display: flex;
   flex-direction: column;
+}
+
+.flip-card-back>* {
+  font-size: 1.25rem;
+  padding-top: 50px;
+  text-align: center;
+}
+
+.flip-card-back>ul>li {
+  padding-top: 10px;
 }
 
 h3 {
@@ -83,12 +101,12 @@ h3 {
 
 li {
   list-style: none;
-  text-align: left;
 }
 
 .title {
   padding-top: 90px;
   text-align: center;
+  padding-bottom: 90px;
 }
 
 .title p {
@@ -98,24 +116,27 @@ li {
 }
 
 .choiceIndex {
-  margin-top: 2px;
   display: flex;
-  justify-content: space-evenly;
+  flex-grow: 1;
+  justify-content: center;
+  margin-top: 2px;
 }
 
-.choiceIndex a {
-  text-decoration: none;
-  color: black;
-}
-
-.choiceIndexButton1,.choiceIndexButton2,.choiceIndexButton3 {
-  flex-basis: 100%;
+.choiceIndexButton1,
+.choiceIndexButton2,
+.choiceIndexButton3 {
+  flex-basis: calc(33.33% - 10px);
   height: 2.5rem;
   font-size: 1.7rem;
   background-color: #6fb1fc;
+  border-radius: 10px;
 }
 
-.choiceIndexButton1:hover{
+.choiceIndexButton3 {
+  justify-content: center;
+}
+
+.choiceIndexButton1:hover {
   background-color: #4364f7;
 }
 
@@ -123,11 +144,43 @@ li {
   background-color: rgb(28, 188, 28);
 }
 
-.choiceIndexButton3:hover{
+.choiceIndexButton3:hover {
   background-color: #f80606;
 }
-.sterItem img{
-  width: 10px;
-  height: 10px;
-  float: left;
+
+.sterItem img {
+  border-radius: 10px;
+  width: 45px;
+  height: 45px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+/*------------------------------------------------------Media queries---------------------------------------------------------*/
+
+
+@media all and (max-width: 1350px) {
+  .mainBodyHome {
+    flex-wrap: wrap;
+  }
+
+  .flip-card {
+    width: 40%;
+    box-sizing: border-box;
+  }
+
+}
+
+@media all and (max-width: 780px) {
+  .mainBodyHome {
+    flex-direction: column;
+  }
+
+  .flip-card {
+    box-sizing: border-box;
+    width: 360px;
+  }
 }
