--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/reset.css" />
   <link rel="stylesheet" href="../css/login.css">
+  <link rel="stylesheet" href="../css/footer.css">
+  <link rel="stylesheet" href="../css/header.css" />
+
   <title>Document</title>
 </head>
 
@@ -13,15 +17,31 @@
   <section class="avatarPic">
     <img src="../images/vraagteken.png" />
   </section>
-  <%- include('partials/header')%>
-    <form action="/login" class="formLoging" method="post">
-      <label for="fname">First name:</label><br>
-      <input type="text" id="fname" name="fname"><br>
-      <label for="lname">Last name:</label><br>
-      <input type="text" id="lname" name="lname"><br><br>
-      <input type="submit" value="login">
-    </form>
-    <%- include('partials/footer')%>
-</body>
+  <nav>
+    <ul>
+      <li class="browser"><a href="/">Landing Page</a></li>
+      <li class="ipad"><a href="/">&#8592;</a></li>
+      <li><a href="/fortniteHome">Home</a></li>
+      <li><a href="/favoriet-images">Favorieten</a></li>
+      <li><a href="/blacklist">Blacklists</a></li>
+      <li><a href="/login">Login</a></li>
+    </ul>
+  </nav>  <div class="login-page">
+    <div class="form">
+      <form class="login-form">
+        <input type="text" placeholder="username"/>
+        <input type="password" placeholder="password"/>
+      <button>login</button>
+      </form>
+    </div>
+  </div>
+  <footer>
+    <section>
+        <h1>Copyright &copy;MSI - Ramazan Sofyan Dachi Rachad</h1>
+    </section>
+    <section>
+        <img src="../images/ap.png">
+    </section>
+</footer></body>
 
 </html>
