--- a/views/logingInfo.ejs
+++ b/views/logingInfo.ejs
@@ -4,17 +4,37 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/reset.css" />
   <link rel="stylesheet" href="../css/login.css">
+  <link rel="stylesheet" href="../css/footer.css">
+  <link rel="stylesheet" href="../css/header.css" />
+
   <title>Document</title>
 </head>
 <body>
+  
   <section class="avatarPic">
     <img src="../images/vraagteken.png" />
   </section>
-  <%- include('partials/header')%>
-  <h1 class="infoForm">You have logged in with the following information:</h1>
+  <nav>
+    <ul>
+      <li class="browser"><a href="/">Landing Page</a></li>
+      <li class="ipad"><a href="/">&#8592;</a></li>
+      <li><a href="/fortniteHome">Home</a></li>
+      <li><a href="/favoriet-images">Favorieten</a></li>
+      <li><a href="/blacklist">Blacklists</a></li>
+      <li><a href="/login">Login</a></li>
+    </ul>
+  </nav>  <h1 class="infoForm">You have logged in with the following information:</h1>
   <code class="infoForm">
     <p>Name:<%=info.fname %> <%=info.lname %></p>
   </code>
-</body>
+  <footer>
+    <section>
+        <h1>Copyright &copy;MSI - Ramazan Sofyan Dachi Rachad</h1>
+    </section>
+    <section>
+        <img src="../images/ap.png">
+    </section>
+</footer></body>
 </html>
