--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,12 @@
-<h1>Copyright &copy;MSI</h1>
+
+    <footer>
+        <section>
+            <h1>Copyright &copy;MSI - Ramazan Sofyan Dachi Rachad</h1>
+        </section>
+        <section>
+            <img src="../images/ap.png">
+        </section>
+    </footer>
 </body>
-</html>
+
+</html
