--- a/public/css/login.css
+++ b/public/css/login.css
@@ -11,12 +11,12 @@ body{
 .form {
   position: relative;
   z-index: 1;
-  background: #FFFFFF;
+  background:linear-gradient(to left, #4364f7, #6fb1fc);;
   max-width: 360px;
   margin: 0 auto 100px;
   padding: 45px;
   text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  border-radius: 10px;
 }
 .form input {
   font-family: "Roboto", sans-serif;
@@ -27,22 +27,24 @@ body{
   margin: 0 0 15px;
   padding: 15px;
   box-sizing: border-box;
-  font-size: 14px;
+  font-size: 18px;
+  border-radius: 10px;
 }
 .form button {
   outline: 0;
-  background: rgb(58, 58, 58);
+  background-color: #2f5988;
   width: 100%;
   border: 0;
   padding: 15px;
   color: #FFFFFF;
-  font-size: 14px;
+  font-size: 18px;
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
+  border-radius: 10px;
 }
 .form button:hover,.form button:active,.form button:focus {
-  background: rgb(66, 64, 64);
+  background: #093566;
 }
 .container {
   position: relative;
