--- a/views/blacklist.ejs
+++ b/views/blacklist.ejs
@@ -33,16 +33,18 @@
     <ul>
       <% for (let i=0; i < blacklist.length; i++) { %>
         <li>
-          <img src="<%= blacklist[i].images %>">
-          <p>Name: <%= blacklist[i].name %>
-          </p><br>
-          <p>Blacklisted Reason:<br><br>
-            <%= blacklist[i].blacklistReason %>
+          <p class="charName"><%= blacklist[i].name %>
           </p>
+          <br>
+          <img src="<%= blacklist[i].images %>">
+          <br><br>
+          <p class="blacklistReason">Reason</p>
+          <p><%= blacklist[i].blacklistReason %></p>
           <div class="buttonblacklist">
             <form method="post" action="/blacklist/<%= i %>">
               <textarea rows="4"
                 name="blacklistReason">Edit blacklist reason</textarea>
+                <br>
               <button type="submit">Save</button>
             </form>
             <form method="post" action="/blacklist/<%= i %>">
@@ -56,7 +58,7 @@
   </section>
   <footer>
     <section>
-      <h1>Copyright &copy;MSI - Ramazan Sofyan Dachi Rachad</h1>
+      <h2>Copyright &copy;MSI - Ramazan Sofyan Dachi Rachad</h2>
     </section>
     <section>
       <img src="../images/ap.png">
