--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -32,7 +32,7 @@
           <button data-close-button class="close-button">&times;</button>
         </div>
         <div class="modal-body">
-          You dont have permission to open this project
+          You don't have permission to open this project.
         </div>
       </div>
       <div id="overlay"></div>
