--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,9 +28,9 @@
     </ul>
   </nav>  <div class="login-page">
     <div class="form">
-      <form class="login-form">
-        <input type="text" placeholder="username"/>
-        <input type="password" placeholder="password"/>
+      <form action="/login" class="login-form"  method="post">
+        <input type="text" name="fname" placeholder="username"/>
+        <input type="password" name="lname" placeholder="password"/>
       <button>login</button>
       </form>
     </div>
