--- a/views/logingInfo.ejs
+++ b/views/logingInfo.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +12,9 @@
 
   <title>Document</title>
 </head>
+
 <body>
-  
+
   <section class="avatarPic">
     <img src="../images/vraagteken.png" />
   </section>
@@ -25,16 +27,20 @@
       <li><a href="/blacklist">Blacklists</a></li>
       <li><a href="/login">Login</a></li>
     </ul>
-  </nav>  <h1 class="infoForm">You have logged in with the following information:</h1>
-  <code class="infoForm">
-    <p>Name:<%=info.fname %> <%=info.lname %></p>
+  </nav>
+  <h1 class="infoForm">You have logged in with the following information:</h1>
+  <code class="Gegevens">
+    <p>Username: <%=info.fname %> <br>
+    Password: <%=info.lname %></p>
   </code>
   <footer>
     <section>
       <h2>Copyright &copy;MSI - Ramazan Sofyan Dachi Rachad</h2>
     </section>
     <section>
-        <img src="../images/ap.png">
+      <img src="../images/ap.png">
     </section>
-</footer></body>
+  </footer>
+</body>
+
 </html>
