--- a/views/fortniteHome.ejs
+++ b/views/fortniteHome.ejs
@@ -26,7 +26,7 @@
       <li class="browser"><a href="/">Landing Page</a></li>
       <li class="ipad"><a href="/">&#8592;</a></li>
       <li><a href="/fortniteHome">Home</a></li>
-      <li><a href="/favoriet-images">Favorieten</a></li>
+      <li><a href="/favoriet">Favorieten</a></li>
       <li><a href="/blacklist">Blacklists</a></li>
       <li><a href="/login">Login</a></li>
     </ul>
@@ -62,7 +62,7 @@
                   <%= avatarImage[i].series %>
                 </li>
                 <div class="sterItem">
-                  <% if (i%2!=0){%>
+                  <% if (ster){%>
                     <img src="../images/ster.jpg" />
                     <%} %>
                 </div>
