--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
       <li class="browser"><a href="/">Landing Page</a></li>
       <li class="ipad"><a href="/">&#8592;</a></li>
       <li><a href="/fortniteHome">Home</a></li>
-      <li><a href="/favoriet-images">Favorieten</a></li>
+      <li><a href="/favoriet">Favorieten</a></li>
       <li><a href="/blacklist">Blacklists</a></li>
       <li><a href="/login">Login</a></li>
     </ul>
